--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Recipe</string>
+    <string name="search_recipes">Search recipes</string>
+    <string name="servings">Servings</string>
 </resources>
