--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Recipe</string>
     <string name="search_recipes">Search recipes</string>
     <string name="servings">Servings</string>
+    <string name="recipe_image">Recipe image</string>
 </resources>
