--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="search_recipes">Search recipes</string>
     <string name="servings">Servings</string>
     <string name="recipe_image">Recipe image</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="show_description">Show description</string>
 </resources>
