--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="show_description">Show description</string>
+    <string name="popular_recipes">Popular recipes</string>
+    <string name="cook_today">What do you want to cook today?</string>
 </resources>
