--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="min">min</string>
     <string name="kcal">kcal</string>
     <string name="ingredients">Ingredients</string>
+    <string name="equipments">Equipments</string>
+    <string name="go_to_steps">Go to steps</string>
 </resources>
