--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="search_recipes">Search recipes</string>
     <string name="servings">Servings</string>
     <string name="recipe_image">Recipe image</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="show_description">Show description</string>
     <string name="popular_recipes">Popular recipes</string>
@@ -13,4 +12,8 @@
     <string name="ingredients">Ingredients</string>
     <string name="equipments">Equipments</string>
     <string name="go_to_steps">Go to steps</string>
+    <string name="recipe_preparation">Recipe preparation</string>
+    <string name="step">Step</string>
+    <string name="ingredients_dt">Ingredients:</string>
+    <string name="equipments_dt">Equipments:</string>
 </resources>
